# hallmodel-py

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: bump-deps.yml  parity.yml  release.yml
bindings/: bw_cpp.cpp
bw_cpp/: __init__.py
docs/history/: CI_SETUP_REPORT.md  README.md  SPLIT_PLAN.md
hallmodel/: __init__.py
proof/: verify.sh
proof/outputs/: adult_female_baseline.json  adult_female_pcarb.json  adult_male_baseline.json  adult_male_deficit.json  adult_male_dt_half.json  adult_male_ei2400.json  adult_male_pal_high.json  adult_multi.json  child_female_730d.json  child_male_365d.json  child_male_5yr.json  child_male_dt_half.json  child_multi.json  energy_exponential.json  energy_linear.json  energy_logarithmic.json  energy_stepwise_l.json  energy_stepwise_r.json
tests/: test_contract_parity.py  test_total_expenditure.py
