[build-system]
requires = ["setuptools>=68", "pybind11>=2.11", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallmodel"
# Concrete version is rewritten by .github/workflows/release.yml to a calver
# (YYYY.M.D.<run>) on every push to master. The 0.0.0 here is a placeholder
# that exists only so local `uv sync` / `pip install -e .` works.
version = "0.0.0"
description = "Python interface to the Hall body-weight dynamics models, backed by the hallmodel-core C++ kernel."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [{ name = "ChocoTonic" }]
keywords = ["body-weight", "metabolism", "Hall", "dynamic-weight-model"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/ChocoTonic/hallmodel-py"
"Core kernel" = "https://github.com/ChocoTonic/hallmodel-core"
"Upstream R package" = "https://github.com/INSP-RH/bw"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pybind11>=2.11",
]

[tool.setuptools]
packages = ["bw_cpp"]

# cibuildwheel: build wheels for Linux x86_64 + macOS arm64, Py 3.10-3.13.
# Skip musllinux + PyPy to keep CI under 5 minutes.
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*musllinux* pp* *i686*"
build-verbosity = 1
# The C++ kernel lives in the submodule, so cibuildwheel needs the submodule
# checked out before invoking the build backend.
before-all = "git config --global --add safe.directory '*'"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.uv]
# Lock file should track concrete dep versions so weekly bump-deps PRs are
# the only path that changes them.
default-groups = ["dev"]
